Corrected some of the extra width on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,7 @@ h1 h3 {
 
 h1 {
    position: relative;
-   color: #fff;    
-   margin: 0 -20px 0px -20px;
+   color: #fff;
    padding: 10px 30px; 
    text-shadow: 0 1px rgba(0,0,0,.8);
    background-color: #0440a0;
@@ -62,6 +61,10 @@ h1:after {
 }
 
 @media (min-width: 768px) {
+   h1 {   
+      margin: 0 -20px 0px -20px;
+   }
+   
    .content{
       width: calc(100% - 40px);
       transition: width 300ms linear;
@@ -69,5 +72,12 @@ h1:after {
    .content.open{
       width: calc(100% - 16.666667% - 50px);
       transition: width 300ms linear;
+   }
+}
+
+@media (max-width:767px){
+   .clear-x-margins{
+      margin-left: 0px !important;
+      margin-right: 0px !important;
    }
 }
