--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@ aside{
 
 .main-menu{
    background-color: rgba(0, 4, 255);
-   height: 320px;
+   height: 20.3rem;
    width: 100%;
    overflow: hidden;
    color: white;
